# kuaifan-claw

./: .gitignore  RELEASE.md  build-mac.bat  build-win.bat  latest.json  platform-config.json  skills-environments.yaml  update-latest.json  交付说明文档.md  新建文本文档.txt  版本迭代说明文档.md
docs/: AGENT_BACKEND_DESIGN.md  BUILD-MACOS.md  DEPLOYMENT_GUIDE.md  FIX_ARCHIVE_2026-04-23.md  UPDATE_ARCHITECTURE.md  修复归档文档-2026-04-23.md  自动更新架构与待修复问题.md
scripts/: build-skills-env.bat  install-skill-env.bat  test_token_coverage.py
src-tauri/: Cargo.toml  build-all.ps1  build.rs  download-bundles.ps1  index.html  meta.json  sliverp-qqbot-1.6.1.tgz  tauri.conf.json  temp_write_test.rs
src-tauri/assets/: index-BVYU6e4J.js  index-Xn4jjZ_Z.css
src-tauri/bundled-env/: README.md
src-tauri/bundled-openclaw/: package-openclaw.ps1
src-tauri/patches/tauri-runtime-wry/src/: lib.rs
src-tauri/resources/data/config/: app.yaml  instances.yaml  models.yaml  plugins.yaml  robots.yaml
src-tauri/resources/plugins/: chrome-extension.tgz  qq.tgz  wechat_clawbot.tgz  wxwork.tgz
src-tauri/resources/skills-env/: README.txt
src-tauri/scripts/: download-bundles.sh  encrypt-package.js
src-tauri/src/: ORD.lnk  bundled_env.rs  env_paths.rs  main.rs  mirror.rs
src-tauri/src/commands/: backup.rs  config.rs  env.rs  feishu_wizard.rs  gateway.rs  gateway_tests.rs  gateway_ws.rs  hidden_cmd.rs  installer.rs  instance.rs  invite.rs  log.rs  mod.rs  model.rs  monitoring.rs  plugin.rs  robot.rs  system.rs  usage.rs  wechat_login_shell.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: backup.rs  cipher.rs  cost_control.rs  invite_code.rs  logger.rs  mod.rs  monitor.rs  pricing.rs
src-tauri/tests/: backend_tests.rs
src-tauri/windows/: hooks.nsi
temp-kuaifan-claw/: DEPLOYMENT_UPDATE_GUIDE.md  README.md  dev.bat  dev.sh  platform-config.json  skills-repos.yaml  start.bat
web/: index.html  (+4 more)
(+68 files in other folders)
